2012-05-04  Nate Chapin  <japhet@chromium.org>

        Don't require FrameLoaderClient to manufacture a commitData() call for empty documents.
        https://bugs.webkit.org/show_bug.cgi?id=85533

        Reviewed by Alexey Proskuryakov.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::FrameLoaderClient):
        (WebKit):
        (WebKit::FrameLoaderClient::finishedLoading):
        * WebCoreSupport/FrameLoaderClientGtk.h:
        (WebKit::FrameLoaderClient::makeRepresentation):
        (WebKit::FrameLoaderClient::revertToProvisionalState):
        (FrameLoaderClient):

2012-05-03  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Rework IME handling to fix bugs and prepare for WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=84556

        Reviewed by Gustavo Noronha Silva.

        Rework input method handling logic into a class called GtkInputMethodFilter.
        This filter now runs before WebCore event handling, allowing the code to more
        easily fake simple compositions that should be seen as keystrokes. We can also
        filter keypresses that should not go to web content at all, such as key up events
        related to key down events that were filtered.

        Also added is a WebViewInputMethodFilter which is a concrete implementation of
        GtkInputMethodFilter. This class contains logic for actually sending events to
        WebCore. In WebKit2 an implementation of GtkInputMethodFilter will send events
        across the IPC channel.

        * GNUmakefile.am: Add new files to the source list.
        * WebCoreSupport/ContextMenuClientGtk.cpp:
        (WebKit::inputMethodsMenuItem): Access the input method context via the filter.
        * WebCoreSupport/EditorClientGtk.cpp: Remove the tricky logic of input method
        events from this class, because it's now in the GtkInputMethodFilter.
        (WebKit::EditorClient::setInputMethodState): Call into the filter.